--- a/css/blocks/order.scss
+++ b/css/blocks/order.scss
@@ -4,8 +4,41 @@
 }
 
 .order__inner {
+    position: relative;
     @include tablets {
         flex-direction: column;
         align-items: center;
     }
+}
+
+.order__overlay {
+    position: absolute;
+    top: 0;
+    height:100vh;
+    width: 100%;
+    overflow: hidden;
+    background-color: $dark-grey-fnav;
+    z-index: 100;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    display: none;
+}
+
+.order__modal {
+    width: rem(300px);
+    min-height: rem(175px);
+    background: $white;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.order__modal-message {
+    font-size: 18px;
+    color: $black;
+    line-height: 30px;
+    margin-bottom: 5%;
 }
